--- a/views/index.ejs
+++ b/views/index.ejs
@@ -208,31 +208,31 @@
         document.getElementById("morning-net").innerText = todayData.modNet[0] ? todayData.modNet[0].net : "--";;
         document.getElementById("noon-mod").innerText = todayData.modNet[1] ? todayData.modNet[1].mod : "--";;
         document.getElementById("noon-net").innerText = todayData.modNet[1] ? todayData.modNet[1].net : "--";;
+        console.log('today holiday ? ' , isHoliday);
+        console.log('today data  ' , todayData);
 
-        if(isHoliday){
+        if (isHoliday === true) {
           document.getElementById("current-update").innerText ='No Data Available';
-        }else{
-        if(todayData.twoD.length < 1 ){
-          if(compareTime(now,"9:00") && !compareTime(now,"12:01")){
-            getLiveData('noon');
-          }else{
-            document.getElementById("current-update").innerText ='No Data Available';
+        } else {
+          if (todayData.twoD.length < 1 ) {
+            if (compareTime(now,"9:00") && !compareTime(now,"12:01")) {
+              getLiveData('noon');
+            } else {
+              document.getElementById("current-update").innerText ='No Data Available';
+            }
+          } else if (todayData.twoD.length === 1){
+            document.getElementById("current-result").innerText = todayData.twoD[0].result;
+            document.getElementById("current-update").innerText = "Updated : " + todayData.twoD[0].date + " " + todayData.twoD[0].time;
+            document.getElementById("noon-set").innerText = todayData.twoD[0].set;
+            document.getElementById("noon-value").innerText =  todayData.twoD[0].value;
+            document.getElementById("noon-result").innerText = todayData.twoD[0].result;
+            if (compareTime(now,"14:00") && !compareTime(now,"16:30")) {
+              getLiveData('evening');
+            }
+          } else if (todayData.twoD.length >= 2) {
+            getFinalData();
           }
-        }else if(todayData.twoD.length === 1){
-          document.getElementById("current-result").innerText = todayData.twoD[0].result;
-          document.getElementById("current-update").innerText = "Updated : " + todayData.twoD[0].date + " " + todayData.twoD[0].time;
-          document.getElementById("noon-set").innerText = todayData.twoD[0].set;
-          document.getElementById("noon-value").innerText =  todayData.twoD[0].value;
-          document.getElementById("noon-result").innerText = todayData.twoD[0].result;
-          if(compareTime(now,"14:00") && !compareTime(now,"16:30")){
-            getLiveData('evening');
-          }
-        }else if(todayData.twoD.length >= 2){
-          getFinalData();
         }
-        }
-
-        
       }
 
       setInterval(() => {
